test/required-cidr-whitelist-ingress/constraint-empty-whitelist.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyUnapprovedCidrsOnIngressWhitelist
metadata:
  name: deny-any-ingress-with-whitelist
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
  parameters:
    allowedCidrs: []
