test/required-cidr-whitelist-ingress/ingress-with-internal-and-random-cidr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: some-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.10.0.42/32,1.1.1.1/24"
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 8
